--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                         <div class="project-header">
                             <h3 class="project-title">
                                 <div class="project-icon"><i class="fas fa-newspaper"></i></div>
-                                NomadsNews
+                                Nomads
                             </h3>
                             <p class="project-description">Адаптивный лендинг на WordPress с интерактивными формами и слайдерами. Оптимизирован для быстрой загрузки и SEO.</p>
                         </div>
@@ -711,18 +711,18 @@
                         </div>
                     </div>
                     <div class="preview-content">
-                        <h3 class="preview-title">NomadsNews</h3>
+                        <h3 class="preview-title">Nomads</h3>
                         <p class="preview-description">Новостной портал с адаптивным дизайном и современным интерфейсом</p>
                     </div>
                 </div>
 
-                <div class="preview-card">
+                <div class="preview-card" onclick="openPreviewModal('mypawscharity')">
                     <div class="preview-image-container">
                         <div class="preview-image">
                             <img src="assets/images/site/mypawscharity/slide1.png" alt="" style="width: 100%;">
                         </div>
                         <div class="preview-overlay">
-                            <button class="preview-btn" onclick="openPreviewModal('mypawscharity')">
+                            <button class="preview-btn" >
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -740,22 +740,10 @@
                     </div>
                 </div>
 
-                <div class="preview-card">
+                <div class="preview-card" onclick="openPreviewModal('mathnails')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <svg width="100%" height="200" viewBox="0 0 400 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="400" height="200" fill="#4ECDC4"/>
-                                <rect x="20" y="20" width="360" height="30" rx="6" fill="white" opacity="0.9"/>
-                                <rect x="30" y="25" width="100" height="20" rx="4" fill="#4ECDC4"/>
-                                <rect x="300" y="25" width="70" height="20" rx="10" fill="#4ECDC4"/>
-                                <rect x="20" y="70" width="80" height="110" rx="12" fill="white" opacity="0.8"/>
-                                <rect x="120" y="70" width="80" height="110" rx="12" fill="white" opacity="0.8"/>
-                                <rect x="220" y="70" width="80" height="110" rx="12" fill="white" opacity="0.8"/>
-                                <rect x="320" y="70" width="60" height="110" rx="12" fill="white" opacity="0.8"/>
-                                <circle cx="60" cy="90" r="15" fill="#4ECDC4"/>
-                                <circle cx="160" cy="90" r="15" fill="#4ECDC4"/>
-                                <circle cx="260" cy="90" r="15" fill="#4ECDC4"/>
-                            </svg>
+                            
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn" onclick="openPreviewModal('calendar')">
