--- a/index.html
+++ b/index.html
@@ -743,7 +743,17 @@
                 <div class="preview-card" onclick="openPreviewModal('mathnails')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            
+                            <svg width="100%" height="200" viewBox="0 0 400 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="400" height="200" fill="#9B59B6"/>
+                                <rect x="20" y="20" width="360" height="30" rx="6" fill="white" opacity="0.9"/>
+                                <rect x="30" y="25" width="80" height="20" rx="4" fill="#9B59B6"/>
+                                <rect x="300" y="25" width="70" height="20" rx="10" fill="#9B59B6"/>
+                                <rect x="20" y="70" width="170" height="80" rx="12" fill="white" opacity="0.8"/>
+                                <rect x="210" y="70" width="170" height="35" rx="8" fill="white" opacity="0.7"/>
+                                <rect x="210" y="115" width="170" height="35" rx="8" fill="white" opacity="0.7"/>
+                                <rect x="20" y="160" width="360" height="20" rx="10" fill="white" opacity="0.6"/>
+                                <circle cx="100" cy="110" r="25" fill="#9B59B6" opacity="0.3"/>
+                            </svg>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn" onclick="openPreviewModal('calendar')">
