--- a/index.html
+++ b/index.html
@@ -740,23 +740,13 @@
                     </div>
                 </div>
 
-                <div class="preview-card" onclick="openPreviewModal('mathnails')">
+                <div class="preview-card" onclick="openPreviewModal('viktoriia')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <svg width="100%" height="200" viewBox="0 0 400 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="400" height="200" fill="#9B59B6"/>
-                                <rect x="20" y="20" width="360" height="30" rx="6" fill="white" opacity="0.9"/>
-                                <rect x="30" y="25" width="80" height="20" rx="4" fill="#9B59B6"/>
-                                <rect x="300" y="25" width="70" height="20" rx="10" fill="#9B59B6"/>
-                                <rect x="20" y="70" width="170" height="80" rx="12" fill="white" opacity="0.8"/>
-                                <rect x="210" y="70" width="170" height="35" rx="8" fill="white" opacity="0.7"/>
-                                <rect x="210" y="115" width="170" height="35" rx="8" fill="white" opacity="0.7"/>
-                                <rect x="20" y="160" width="360" height="20" rx="10" fill="white" opacity="0.6"/>
-                                <circle cx="100" cy="110" r="25" fill="#9B59B6" opacity="0.3"/>
-                            </svg>
+                            <img src="assets/images/site/viktoriia/slide1.png" alt="" style="width: 100%;">
                         </div>
                         <div class="preview-overlay">
-                            <button class="preview-btn" onclick="openPreviewModal('calendar')">
+                            <button class="preview-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -769,29 +759,18 @@
                         </div>
                     </div>
                     <div class="preview-content">
-                        <h3 class="preview-title">Calendar Task Manager</h3>
-                        <p class="preview-description">Веб-календарь с системой управления задачами и событиями</p>
+                        <h3 class="preview-title">Viktoriia Lakatosh Nails</h3>
+                        <p class="preview-description">Сайт маникюра: услуги, галерея работ, контакты для записи онлайн.</p>
                     </div>
                 </div>
 
-                <div class="preview-card">
+                <div class="preview-card" onclick="openPreviewModal('atelier_md')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <svg width="100%" height="200" viewBox="0 0 400 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="400" height="200" fill="#FFD93D"/>
-                                <rect x="20" y="20" width="360" height="35" rx="8" fill="white" opacity="0.9"/>
-                                <rect x="30" y="30" width="120" height="15" rx="7" fill="#FFD93D"/>
-                                <rect x="320" y="27" width="50" height="20" rx="10" fill="#FFD93D"/>
-                                <rect x="20" y="75" width="360" height="50" rx="12" fill="white" opacity="0.8"/>
-                                <rect x="40" y="90" width="200" height="20" rx="10" fill="#FFD93D"/>
-                                <rect x="260" y="85" width="100" height="30" rx="15" fill="#FFD93D"/>
-                                <rect x="20" y="145" width="110" height="35" rx="8" fill="white" opacity="0.7"/>
-                                <rect x="145" y="145" width="110" height="35" rx="8" fill="white" opacity="0.7"/>
-                                <rect x="270" y="145" width="110" height="35" rx="8" fill="white" opacity="0.7"/>
-                            </svg>
+                            <img src="assets/images/site/atelier_md/slide1.png" alt="" style="width: 100%;">
                         </div>
                         <div class="preview-overlay">
-                            <button class="preview-btn" onclick="openPreviewModal('mathnails')">
+                            <button class="preview-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -804,8 +783,8 @@
                         </div>
                     </div>
                     <div class="preview-content">
-                        <h3 class="preview-title">MathNails Calculator</h3>
-                        <p class="preview-description">React-приложение для расчётов мастеров ногтевого сервиса</p>
+                        <h3 class="preview-title">Atelier MD</h3>
+                        <p class="preview-description">Сайт ателье: услуги пошива, портфолио, контакты для заказов.</p>
                     </div>
                 </div>
 
