--- a/index.html
+++ b/index.html
@@ -812,6 +812,54 @@
                     </div>
                 </div>
 
+                <div class="preview-card" onclick="openPreviewModal('django_tiktok')">
+                    <div class="preview-image-container">
+                        <div class="preview-image">
+                            <img src="assets/images/site/django_tiktok/slide1.png" alt="" style="width: 100%;">
+                        </div>
+                        <div class="preview-overlay">
+                            <button class="preview-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                    aria-hidden="true">
+                                <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12z"/>
+                                <circle cx="12" cy="12" r="3"/>
+                                </svg>
+                                <p class="preview-overlay-text">Посмотреть превью</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="preview-content">
+                        <h3 class="preview-title">Django TikTok</h3>
+                        <p class="preview-description">Веб-приложение для продвижения в TikTok с оплатой и автоматизацией.</p>
+                    </div>
+                </div>
+
+                <div class="preview-card" onclick="openPreviewModal('calendar_task')">
+                    <div class="preview-image-container">
+                        <div class="preview-image">
+                            <img src="assets/images/site/calendar_task/slide1.png" alt="" style="width: 100%;">
+                        </div>
+                        <div class="preview-overlay">
+                            <button class="preview-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                    aria-hidden="true">
+                                <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12z"/>
+                                <circle cx="12" cy="12" r="3"/>
+                                </svg>
+                                <p class="preview-overlay-text">Посмотреть превью</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="preview-content">
+                        <h3 class="preview-title">Calendar Task</h3>
+                        <p class="preview-description">Веб-приложение для создания и управления событиями с поддержкой календаря и системы пользователей.</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
