--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <canvas class="matrix-canvas" id="matrixCanvas"></canvas>
         <div class="container">
             <div class="hero-content">
-                <div class="hero-text">
+                <div class="hero-text" style="z-index: 100;">
                     <h2>Привет, я Никита Урсуленко</h2>
                     <p>Full-stack разработчик | Python, JS, Django, WordPress</p>
                     <div class="hero-buttons">
