--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <!-- Mobile Navigation Overlay -->
     <div class="mobile-nav-overlay">
+        <canvas class="matrix-canvas" id="matrixCanvas2"></canvas>
         <div class="mobile-nav-links">
             <a href="#home">Главная</a>
             <a href="#about">Обо мне</a>
@@ -87,7 +88,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <canvas class="matrix-canvas" id="matrixCanvas"></canvas>
+        <canvas class="matrix-canvas" id="matrixCanvas1"></canvas>
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text" style="z-index: 100;">
@@ -867,55 +868,57 @@
     <!-- Tech Stack Section -->
     <section id="skills" class="tech-stack">
         <div class="container">
-            <h2 class="section-title fade-in">Технологический стек</h2>
-            <div class="tech-grid">
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fab fa-python"></i></div>
-                    <div class="tech-name">Python</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-code"></i></div>
-                    <div class="tech-name">Django</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fab fa-react"></i></div>
-                    <div class="tech-name">React</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-bolt"></i></div>
-                    <div class="tech-name">Next.js</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fab fa-wordpress"></i></div>
-                    <div class="tech-name">WordPress</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-palette"></i></div>
-                    <div class="tech-name">Tailwind</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-database"></i></div>
-                    <div class="tech-name">PostgreSQL</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fab fa-docker"></i></div>
-                    <div class="tech-name">Docker</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-fire"></i></div>
-                    <div class="tech-name">Redis</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-rocket"></i></div>
-                    <div class="tech-name">FastAPI</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fas fa-leaf"></i></div>
-                    <div class="tech-name">MongoDB</div>
-                </div>
-                <div class="tech-item fade-in">
-                    <div class="tech-icon"><i class="fab fa-node-js"></i></div>
-                    <div class="tech-name">Node.js</div>
+            <h2 class="section-title">Технологический стек</h2>
+            <div class="tech-slider">
+                <div class="tech-track" id="techTrack">
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fab fa-python"></i></div>
+                        <div class="tech-name">Python</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-code"></i></div>
+                        <div class="tech-name">Django</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fab fa-react"></i></div>
+                        <div class="tech-name">React</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-bolt"></i></div>
+                        <div class="tech-name">Next.js</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fab fa-wordpress"></i></div>
+                        <div class="tech-name">WordPress</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-palette"></i></div>
+                        <div class="tech-name">Tailwind</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-database"></i></div>
+                        <div class="tech-name">PostgreSQL</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fab fa-docker"></i></div>
+                        <div class="tech-name">Docker</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-fire"></i></div>
+                        <div class="tech-name">Redis</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-rocket"></i></div>
+                        <div class="tech-name">FastAPI</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fas fa-leaf"></i></div>
+                        <div class="tech-name">MongoDB</div>
+                    </div>
+                    <div class="tech-item">
+                        <div class="tech-icon"><i class="fab fa-node-js"></i></div>
+                        <div class="tech-name">Node.js</div>
+                    </div>
                 </div>
             </div>
         </div>
