--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <meta property="og:image" content="https://nikita-ursulenko.github.io/social-preview.png">
     <meta property="og:url" content="https://nikita-ursulenko.github.io/">
     <meta property="og:type" content="website">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:site_name" content="Nikita Ursulenco CV">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Nikita Ursulenco — Full-stack Developer">
