--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <meta property="og:title" content="Nikita Ursulenco — Full-stack Developer">
     <meta property="og:description" content="Портфолио Никиты Урсуленко — Full-stack разработчик. Опыт в Python, Django, React, WordPress.">
-    <meta property="og:image" content="https://nikita-ursulenko.github.io/social-preview.png">
+    <meta property="og:image" content="https://nikita-ursulenko.github.io/favicon.svg">
     <meta property="og:url" content="https://nikita-ursulenko.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
@@ -32,13 +32,23 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Nikita Ursulenco — Full-stack Developer">
     <meta name="twitter:description" content="Портфолио Никиты Урсуленко — Full-stack разработчик. Опыт в Python, Django, React, WordPress.">
-    <meta name="twitter:image" content="https://nikita-ursulenko.github.io/social-preview.png">
+    <meta name="twitter:image" content="https://nikita-ursulenko.github.io/favicon.svg">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <script src="assets/js/main.js" defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GS92CYBR6Z"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GS92CYBR6Z');
+    </script>
 </head>
+
 <body>
     <!-- Navigation -->
     <nav>
@@ -94,7 +104,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text" style="z-index: 100;">
-                    <h2>Привет, я Никита Урсуленко</h2>
+                    <h1>Привет, я Никита Урсуленко</h1>
                     <p>Full-stack разработчик | Python, JS, Django, WordPress</p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">Посмотреть проекты</a>
