--- a/index.html
+++ b/index.html
@@ -966,7 +966,16 @@
                             <h3 class="education-title">Commodity Science</h3>
                             <p class="education-institution">College Agrarian Economy</p>
                         </div>
-                        <div class="education-date">2016 - 2020</div>
+                        <div class="education-date">
+                            <span> 2016 - 2020 </span>
+                            <a href="#" 
+                            class="verify-link" 
+                            title="Verify Certificate">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H6.9C4.29 7 2.2 9.09 2.2 11.7v.6c0 2.61 2.09 4.7 4.7 4.7H11v-2H6.9c-1.71 0-3.1-1.39-3.1-3.1v-.6zm4.1 1h8v-2H8v2zm9.1-6H13v2h4.1c1.71 0 3.1 1.39 3.1 3.1v.6c0 1.71-1.39 3.1-3.1 3.1H13v2h4.1c2.61 0 4.7-2.09 4.7-4.7v-.6C21.8 9.09 19.71 7 17.1 7z"></path>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -1020,7 +1029,13 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- Модальное окно -->
+                <div id="certificateModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <iframe id="certificateFrame" src="" frameborder="0"></iframe>
+                </div>
+                </div>
                 
             </div>
         </div>
