--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikita Ursulenco - Full-stack Developer</title>
-    
+    <meta name="description" content="Портфолио Никиты Урсуленко: разработчика с опытом в веб-технологиях, дизайне и программировании.">
+
     <link rel="stylesheet" href="assets/style/css/style.min.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
