--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
     <meta name="twitter:description" content="Портфолио Никиты Урсуленко — Full-stack разработчик. Опыт в Python, Django, React, WordPress.">
     <meta name="twitter:image" content="https://nikita-ursulenko.github.io/favicon.svg">
 
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Nikita Ursulenco",
+        "jobTitle": "Full-stack Developer",
+        "url": "https://nikita-ursulenko.github.io",
+        "sameAs": [
+            "https://www.linkedin.com/in/nikita-ursulenco",
+            "https://github.com/nikita-ursulenko",
+            "https://t.me/banasea"
+        ],
+        "image": "https://nikita-ursulenko.github.io/favicon.svg",
+        "description": "Портфолио full-stack разработчика: сайты, скрипты, приложения на WordPress, React, Python и JavaScript."
+    }
+    </script>
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
