--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         "description": "Портфолио full-stack разработчика: сайты, скрипты, приложения на WordPress, React, Python и JavaScript."
     }
     </script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="/assets/style/css/all.min.css">
     <script src="assets/js/main.js" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GS92CYBR6Z"></script>
