--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Портфолио Никиты Урсуленко: разработчика с опытом в веб-технологиях, дизайне и программировании.">
 
     <link rel="stylesheet" href="assets/style/css/style.min.css">
-
+    <link rel="preload" href="/fontawesome-free-7.0.1-web/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="/fontawesome-free-7.0.1-web/css/all.min.css"></noscript>
+    <script src="assets/js/main.js" defer></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -52,8 +54,7 @@
         "description": "Портфолио full-stack разработчика: сайты, скрипты, приложения на WordPress, React, Python и JavaScript."
     }
     </script>
-    <link rel="stylesheet" href="/fontawesome-free-7.0.1-web/css/all.min.css">
-    <script src="assets/js/main.js" defer></script>
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GS92CYBR6Z"></script>
     <script>
