--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikita Ursulenco - Full-stack Developer</title>
     <meta name="description" content="Портфолио Никиты Урсуленко: разработчика с опытом в веб-технологиях, дизайне и программировании.">
-
-    <link rel="stylesheet" href="assets/style/css/style.min.css">
+    <link rel="preload" href="assets/style/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="assets/style/css/style.min.css"></noscript>
     <link rel="preload" href="/fontawesome-free-7.0.1-web/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/fontawesome-free-7.0.1-web/css/all.min.css"></noscript>
     <script src="assets/js/main.js" defer></script>
