--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Портфолио Никиты Урсуленко: разработчика с опытом в веб-технологиях, дизайне и программировании.">
 
     <link rel="stylesheet" href="assets/style/css/style.min.css">
-    <link rel="preload" href="/fontawesome-free-7.0.1-web/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="/fontawesome-free-7.0.1-web/css/all.min.css"></noscript>
+    <link rel="preload" href="/fontawesome-free-7.0.1-web/css/all.min.css?v=1.0" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="/fontawesome-free-7.0.1-web/css/all.min.css?v=1.0"></noscript>
     <script src="assets/js/main.js" defer></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
