--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikita Ursulenco - Full-stack Developer</title>
     <meta name="description" content="Портфолио Никиты Урсуленко: разработчика с опытом в веб-технологиях, дизайне и программировании.">
-
+    <style>
+    .hero-text h1 {
+        font-family: "Inter", sans-serif;
+        font-size: 3.5rem;
+        font-weight: 700;
+        margin-bottom: 20px;
+        background: linear-gradient(135deg, #ffffff 0%, #8b949e 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    </style>
     <link rel="stylesheet" href="assets/style/css/style.min.css">
     <link rel="preload" href="/fontawesome-free-7.0.1-web/css/all.min.css?v=1.0" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/fontawesome-free-7.0.1-web/css/all.min.css?v=1.0"></noscript>
@@ -72,7 +82,7 @@
         <div class="container">
             <div class="nav-container">
                 <a href="javascript:void(0)" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
-                    <div class="logo"><img src="assets/images/logo.png" alt="logo"></div>
+                    <div class="logo"><img src="assets/images/logo.webp" alt="logo" loading="lazy"></div>
                 </a>
                 <ul class="nav-links">
                     <li><a href="#home">Главная</a></li>
