--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                 <div class="preview-card" onclick="openPreviewModal('mded')" style="cursor: pointer;">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/mded/site.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/mded/site.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn" onclick="openPreviewModal('mded')">
@@ -736,7 +736,7 @@
                 <div class="preview-card" onclick="openPreviewModal('nomadsnews')" style="cursor: pointer;">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/nomads/site.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/nomads/site.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -760,7 +760,7 @@
                 <div class="preview-card" onclick="openPreviewModal('mypawscharity')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/mypawscharity/slide1.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/mypawscharity/slide1.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn" >
@@ -784,7 +784,7 @@
                 <div class="preview-card" onclick="openPreviewModal('viktoriia')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/viktoriia/slide1.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/viktoriia/slide1.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -808,7 +808,7 @@
                 <div class="preview-card" onclick="openPreviewModal('atelier_md')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/atelier_md/slide1.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/atelier_md/slide1.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -832,7 +832,7 @@
                 <div class="preview-card" onclick="openPreviewModal('nailshop')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/nailshop/slide1.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/nailshop/slide1.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -856,7 +856,7 @@
                 <div class="preview-card" onclick="openPreviewModal('django_tiktok')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/django_tiktok/slide1.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/django_tiktok/slide1.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -880,7 +880,7 @@
                 <div class="preview-card" onclick="openPreviewModal('calendar_task')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/calendar_task/slide1.webp" alt="" style="width: 100%;">
+                            <img src="assets/images/site/calendar_task/slide1.webp" alt="" style="width: 100%;" loading="lazy>
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
