--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <title>Nikita Ursulenco - Full-stack Developer</title>
     <meta name="description" content="Портфолио Никиты Урсуленко: разработчика с опытом в веб-технологиях, дизайне и программировании.">
     <style>
-    .hero-text h1 {
-        font-family: "Inter", sans-serif;
-        font-size: 3.5rem;
-        font-weight: 700;
-        margin-bottom: 20px;
-        background: linear-gradient(135deg, #ffffff 0%, #8b949e 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
     </style>
     <link rel="stylesheet" href="assets/style/css/style.min.css">
     <link rel="preload" href="/fontawesome-free-7.0.1-web/css/all.min.css?v=1.0" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -712,7 +703,7 @@
                 <div class="preview-card" onclick="openPreviewModal('mded')" style="cursor: pointer;">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/mded/site.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/mded/site.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn" onclick="openPreviewModal('mded')">
@@ -736,7 +727,7 @@
                 <div class="preview-card" onclick="openPreviewModal('nomadsnews')" style="cursor: pointer;">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/nomads/site.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/nomads/site.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -760,7 +751,7 @@
                 <div class="preview-card" onclick="openPreviewModal('mypawscharity')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/mypawscharity/slide1.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/mypawscharity/slide1.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn" >
@@ -784,7 +775,7 @@
                 <div class="preview-card" onclick="openPreviewModal('viktoriia')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/viktoriia/slide1.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/viktoriia/slide1.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -808,7 +799,7 @@
                 <div class="preview-card" onclick="openPreviewModal('atelier_md')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/atelier_md/slide1.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/atelier_md/slide1.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -832,7 +823,7 @@
                 <div class="preview-card" onclick="openPreviewModal('nailshop')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/nailshop/slide1.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/nailshop/slide1.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -856,7 +847,7 @@
                 <div class="preview-card" onclick="openPreviewModal('django_tiktok')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/django_tiktok/slide1.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/django_tiktok/slide1.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
@@ -880,7 +871,7 @@
                 <div class="preview-card" onclick="openPreviewModal('calendar_task')">
                     <div class="preview-image-container">
                         <div class="preview-image">
-                            <img src="assets/images/site/calendar_task/slide1.webp" alt="" style="width: 100%;" loading="lazy>
+                            <img src="assets/images/site/calendar_task/slide1.webp" alt="" style="width: 100%;" loading="lazy">
                         </div>
                         <div class="preview-overlay">
                             <button class="preview-btn">
