Добавлен проект Baumaster Frankfurt: проект, превью сайта, изображения WebP и исправлена работа модального окна

--- a/index.html
+++ b/index.html
@@ -494,6 +494,47 @@
         <div class="container">
             <h2 class="section-title fade-in">Мои проекты</h2>
             <div class="projects-grid">
+                <!-- Baumaster Frankfurt PROJECT-->
+                <div class="project-card fade-in">
+                    <div class="project-card-inner ">
+                        <div class="project-header">
+                            <h3 class="project-title">
+                                <div class="project-icon"><i class="fas fa-building"></i></div>
+                                Baumaster Frankfurt
+                            </h3>
+                            <p class="project-description">Современный корпоративный сайт строительной компании с интегрированной админ-панелью для управления контентом. Многоязычность, SEO оптимизация и интеграции с внешними сервисами.</p>
+                        </div>
+                        <div class="project-content">
+                            <div class="project-tech">
+                                <div class="tech-title">Технологии</div>
+                                <div class="project-tags">
+                                    <span class="tag">PHP</span>
+                                    <span class="tag">JavaScript</span>
+                                    <span class="tag">CSS</span>
+                                    <span class="tag">SQLite</span>
+                                    <span class="tag">SEO</span>
+                                </div>
+                            </div>
+                            <div class="project-features">
+                                <div class="features-title">Ключевые фишки</div>
+                                <ul class="features-list">
+                                    <li>Полнофункциональная админ-панель для управления контентом</li>
+                                    <li>Многоязычность (русский, немецкий, английский) и SEO оптимизация</li>
+                                    <li>Интеграции с Google Analytics, Maps и система тестирования</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project-footer">
+                            <a href="https://github.com/nikita-ursulenko/baumaster-frankfurt" class="project-link" target="_blank">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                            </svg>
+                                GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Nail Mastery Hub PROJECT-->
                 <div class="project-card fade-in">
                     <div class="project-card-inner ">
@@ -1020,11 +1061,21 @@
         "@type": "ItemList",
         "name": "Portfolio Projects",
         "description": "Проекты Никиты Урсуленко - Full-stack разработчика",
-        "numberOfItems": 11,
+        "numberOfItems": 12,
         "itemListElement": [
             {
                 "@type": "SoftwareApplication",
                 "position": 1,
+                "name": "Baumaster Frankfurt",
+                "description": "Современный корпоративный сайт строительной компании с интегрированной админ-панелью для управления контентом. Многоязычность, SEO оптимизация и интеграции с внешними сервисами.",
+                "applicationCategory": "WebApplication",
+                "operatingSystem": "Web",
+                "programmingLanguage": ["PHP", "JavaScript", "CSS", "SQLite"],
+                "url": "https://github.com/nikita-ursulenko/baumaster-frankfurt"
+            },
+            {
+                "@type": "SoftwareApplication",
+                "position": 2,
                 "name": "CVFlow Buddy",
                 "description": "Автоматизированная система для отправки CV на вакансии. AI-анализ резюме, автоматическая авторизация и массовая отправка CV на IT вакансии с помощью Playwright и Groq AI.",
                 "applicationCategory": "WebApplication",
@@ -1044,7 +1095,7 @@
             },
             {
                 "@type": "SoftwareApplication",
-                "position": 4,
+                "position": 5,
                 "name": "PHP Multilang Template",
                 "description": "Простой PHP шаблон для создания многоязычных веб-сайтов с поддержкой SEO оптимизации. Автоматическая генерация мета-тегов, Open Graph, Twitter Cards и JSON-LD структурированных данных.",
                 "applicationCategory": "WebApplication",
@@ -1054,7 +1105,7 @@
             },
             {
                 "@type": "SoftwareApplication",
-                "position": 5,
+                "position": 6,
                 "name": "MDED",
                 "description": "Кастомная WordPress-тема с современной архитектурой. Использует Timber/Twig для чистого кода и Tailwind CSS для стилизации.",
                 "applicationCategory": "WebApplication",
@@ -1063,8 +1114,8 @@
                 "url": "https://github.com/nikita-ursulenko/MDED"
             },
             {
-                "@type": "SoftwareApplication", 
-                "position": 6,
+                "@type": "SoftwareApplication",
+                "position": 7,
                 "name": "Nomads",
                 "description": "Адаптивный лендинг на WordPress с интерактивными формами и слайдерами. Оптимизирован для быстрой загрузки и SEO.",
                 "applicationCategory": "WebApplication",
@@ -1074,7 +1125,7 @@
             },
             {
                 "@type": "SoftwareApplication",
-                "position": 7,
+                "position": 8,
                 "name": "venvArbitrage",
                 "description": "Python-бот для автоматического криптоарбитража между биржами. Анализирует спреды и выполняет прибыльные сделки.",
                 "applicationCategory": "DesktopApplication",
@@ -1084,7 +1135,7 @@
             },
             {
                 "@type": "SoftwareApplication",
-                "position": 8,
+                "position": 9,
                 "name": "Calendar Task",
                 "description": "Веб-календарь с системой авторизации и админ-панелью. Поддерживает различные виды отображения и управление задачами.",
                 "applicationCategory": "WebApplication",
@@ -1093,8 +1144,8 @@
                 "url": "https://github.com/nikita-ursulenko/calendar-task"
             },
             {
-                "@type": "SoftwareApplication",
-                "position": 9,
+                "@type": "SoftwareApplication", 
+                "position": 10,
                 "name": "KOTLIN-SaleOfApartments",
                 "description": "Android-приложение для продажи квартир с удобной системой поиска. Включает фильтрацию и управление заявками.",
                 "applicationCategory": "MobileApplication",
@@ -1104,7 +1155,7 @@
             },
             {
                 "@type": "SoftwareApplication",
-                "position": 10,
+                "position": 11,
                 "name": "Python-Parser-Telegram",
                 "description": "Парсер участников Telegram-групп с возможностью сохранения данных. Удобный GUI для настройки и мониторинга процесса.",
                 "applicationCategory": "DesktopApplication",
@@ -1114,7 +1165,7 @@
             },
             {
                 "@type": "SoftwareApplication",
-                "position": 11,
+                "position": 12,
                 "name": "Django-TikTok-SMM-Web",
                 "description": "Веб-платформа для продвижения TikTok видео через Django. Система заказов, API интеграции и приём платежей.",
                 "applicationCategory": "WebApplication",
@@ -1342,6 +1393,31 @@
                     <div class="preview-content">
                         <h3 class="preview-title">Nomads</h3>
                         <p class="preview-description">Новостной портал с адаптивным дизайном и современным интерфейсом</p>
+                    </div>
+                </div>
+
+                <!-- Baumaster Frankfurt SITE-->
+                <div class="preview-card" onclick="openPreviewModal('baumaster_frankfurt')" style="cursor: pointer;">
+                    <div class="preview-image-container">
+                        <div class="preview-image">
+                            <img src="assets/images/site/baumaster-frankfurt/1firstpage.webp" alt="Baumaster Frankfurt - Corporate website preview" style="width: 100%;" loading="lazy" width="400" height="200">
+                        </div>
+                        <div class="preview-overlay">
+                            <button class="preview-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                    aria-hidden="true">
+                                <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12z"/>
+                                <circle cx="12" cy="12" r="3"/>
+                                </svg>
+                                <p class="preview-overlay-text">Посмотреть превью</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="preview-content">
+                        <h3 class="preview-title">Baumaster Frankfurt</h3>
+                        <p class="preview-description">Современный корпоративный сайт строительной компании с интегрированной админ-панелью для управления контентом. Многоязычность, SEO оптимизация и интеграции с внешними сервисами.</p>
                     </div>
                 </div>
 
